compiler/tests/en/errors/dup_field.salam
// EXPECT: E027
struct P:
    x i32 = 0
    x i32 = 1
end
func main: end
